Ajout de la notion d'Emprunteur (BDD et entité)

--- a/src/main/resources/templates/ajoutertopo.html
+++ b/src/main/resources/templates/ajoutertopo.html
@@ -18,12 +18,12 @@
                 </div>
             </div>
             <div  class="form-group row">
-                <label for="descritpionTopo" class="col-sm-2 col-form-label">Description</label>
-                <!--<input type="text" th:field="*{descritpionTopo}" id="descritpionTopo" placeholder="descritpionTopo">-->
+                <label for="descriptionTopo" class="col-sm-2 col-form-label">Description</label>
+                <!--<input type="text" th:field="*{descriptionTopo}" id="descriptionTopo" placeholder="descriptionTopo">-->
                 <div class="col-sm-10">
-                    <textarea th:field="*{descritpionTopo}" class="form-control" id="descritpionTopo"
-                                                        placeholder="Descritpion" rows="3"></textarea>
-                    <span th:if="${#fields.hasErrors('descritpionTopo')}" th:errors="*{descritpionTopo}"></span>
+                    <textarea th:field="*{descriptionTopo}" class="form-control" id="descriptionTopo"
+                                                        placeholder="description" rows="3"></textarea>
+                    <span th:if="${#fields.hasErrors('descriptionTopo')}" th:errors="*{descriptionTopo}"></span>
                 </div>
             </div>
             <div class="form-group row">
