--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,7 +6,7 @@
 <header th:replace="generique :: nav"></header>
 
 
-<div class="container">
+<div class="container-fluid">
     <H3 class="monTitre">Page d'ERREUR</H3>
     <h4 th:text="${errorCode}"></h4>
     <p th:utext="${errorMessage}"></p>
