--- a/src/main/resources/templates/topo.html
+++ b/src/main/resources/templates/topo.html
@@ -12,9 +12,9 @@
         <label for="nomTopo">Nom</label>
         <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nomTopo">
         <!--<span th:if="${#fields.hasErrors('nomtopo')}" th:errors="*{nomTopo }"></span>-->
-        <label for="descritpionTopo">Description</label>
-        <input type="text" th:field="*{descritpionTopo}" id="descritpionTopo" placeholder="descritpionTopo">
-        <!--<span th:if="${#fields.hasErrors('descritpionTopo')}" th:errors="*{descritpionTopo}"></span>-->
+        <label for="descriptionTopo">Description</label>
+        <input type="text" th:field="*{descriptionTopo}" id="descriptionTopo" placeholder="descriptionTopo">
+        <!--<span th:if="${#fields.hasErrors('descriptionTopo')}" th:errors="*{descriptionTopo}"></span>-->
         <label for="dateParution">Date parution</label>
         <input type="date" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
         <!--<span th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>-->
