--- a/src/main/resources/templates/majtopo.html
+++ b/src/main/resources/templates/majtopo.html
@@ -10,11 +10,11 @@
     <form action="#" th:action="@{/sauvertopo/{id}(id=${topo.topoId})}" th:object="${topo}" method="post">
         <!--<div class="form-group" >-->
             <label for="nomTopo">Nom</label>
-            <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nomTopo" th:value="*{descritpionTopo}">
+            <input type="text" th:field="*{nomTopo}" id="nomTopo" placeholder="nomTopo" th:value="*{descriptionTopo}">
             <span class="text-danger" th:if="${#fields.hasErrors('nomTopo')}" th:errors="*{nomTopo }"></span>
-            <label for="descritpionTopo">Description</label>
-            <input type="text" th:field="*{descritpionTopo}" id="descritpionTopo" placeholder="descritpionTopo">
-            <span class="text-danger" th:if="${#fields.hasErrors('descritpionTopo')}" th:errors="*{descritpionTopo}"></span>
+            <label for="descriptionTopo">Description</label>
+            <input type="text" th:field="*{descriptionTopo}" id="descriptionTopo" placeholder="descriptionTopo">
+            <span class="text-danger" th:if="${#fields.hasErrors('descriptionTopo')}" th:errors="*{descriptionTopo}"></span>
             <label for="dateParution">Date parution</label>
             <input type="date" th:field="*{dateParution}" id="dateParution" placeholder="dateParution">
             <span class="text-danger" th:if="${#fields.hasErrors('dateParution')}" th:errors="*{dateParution}"></span>
